Specify a custom elasticsearch-template.json

--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -10,5 +10,8 @@ input {
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
+        index => "logstash-%{+YYYY.MM.dd}"
+        template => "/etc/logstash/conf.d/elasticsearch-template.json"
+        template_name => "my-logstash"
 	}
 }
