--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>elk-event-generator</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>BDD testing of pippo demo with Cucumber and Serenity</name>
+	<name>Generator for log events that are send into Logstash through logback</name>
 
 	<properties>
 		<slf4j.version>1.7.7</slf4j.version>
@@ -65,6 +65,22 @@
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>ro.fortsoft.elk.testdata.generator.Start</mainClass>
 				</configuration>
 			</plugin>
 
