--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 		<slf4j.version>1.7.7</slf4j.version>
 		<logstash.logback.encoder.version>4.5.1</logstash.logback.encoder.version>
 		<ch.qos.logback.version>1.1.2</ch.qos.logback.version>
+		<typesafe.config>1.3.0</typesafe.config>
+		<commons.math>3.6</commons.math>
 	</properties>
 
 	<dependencies>
@@ -23,6 +25,18 @@
             <artifactId>jfairy</artifactId>
             <version>0.5.1</version>
         </dependency>
+
+		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+			<version>${typesafe.config}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>${commons.math}</version>
+		</dependency>
 
 		<!-- Logging -->
         <dependency>
