--- a/src/main/resources/jobs.conf
+++ b/src/main/resources/jobs.conf
@@ -4,11 +4,11 @@ events {
     jobs:[
         {
             name:login,
-            probability:0.2
+            probability:0.7
         },
         {
             name:submit,
-            probability:0.8
+            probability:0.3
         }
     ]
 
@@ -19,5 +19,5 @@ login {
 }
 
 submit {
-   class : ro.fortsoft.elk.testdata.generator.event.SubmitEvent
+   class : ro.fortsoft.elk.testdata.generator.event.SubmitOrderEvent
 }
