Add RandomExceptionEvent type of job

--- a/src/main/resources/jobs.conf
+++ b/src/main/resources/jobs.conf
@@ -4,11 +4,15 @@ events {
     jobs:[
         {
             name:login,
-            probability:0.7
+            probability:0.6
         },
         {
             name:submit,
             probability:0.3
+        },
+        {
+            name:exceptions,
+            probability:0.1
         }
     ]
 
@@ -20,4 +24,8 @@ login {
 
 submit {
    class : ro.fortsoft.elk.testdata.generator.event.SubmitOrderEvent
+}
+
+exceptions {
+   class : ro.fortsoft.elk.testdata.generator.event.RandomExceptionEvent
 }
